Fix for video on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -807,7 +807,7 @@ ul#nav li a:hover,ul#nav li a:focus {
 
 .youtube{
     width: 100%;
-    height: 150px;
+    height: 200px;
   }
 }
 
